--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="css/skeleton.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://kit.fontawesome.com/e003a6f9a1.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/e003a6f9a1.js" crossorigin="anonymous"></script> -->
     <title>audio features</title>
   </head>
   <body>
@@ -109,9 +109,10 @@
     </div>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
-
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script> -->
+    <script src="tfjs@1.0.0_dist_tf.min.js"></script>
+    <script src="tfjs-vis@1.0.2.umd.min.js"></script>
     <script src="utils.js"></script>
     <script src="circularBuffer.js"></script>
     <script src="windowing.js"></script>
